...

                <ImageView
                    android:id="@+id/iv_logo_registry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:contentDescription="@string/ICONO_NOMBRE_ENTREVISTADO"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/il_interview_name"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_interview_name"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_interview_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_interview_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_interview_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_FECHA_NAC_ENTREVISTADO"
                    app:layout_constraintBottom_toBottomOf="@+id/il_birth_date"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_birth_date"
...
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_birth_date"
                    app:layout_constraintTop_toBottomOf="@+id/il_interviewee_genre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                <!-- Autocompletado escrito a mano con coincidencias  COMBINADO con spinnr fijo-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_interview_city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_retire_legal"
                    style="@style/Widget.MaterialComponents.CompoundButton.Switch"
                    android:layout_width="0dp"
...
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_switch_retire_value"
                    app:layout_constraintStart_toStartOf="@+id/il_n_coexistence_interviewee"
                    app:layout_constraintTop_toBottomOf="@+id/il_n_coexistence_interviewee" />

...
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_coexistence"
                    app:layout_constraintTop_toBottomOf="@+id/il_interviewee_civil_state">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_n_coexistence_interviewee"
                        style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
...
                <!-- Autocompletado con selector de opciones fijo (SPINNER)-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_interviewee_educational_level"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
...
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_TIPO_CONVIVENCIA"
                    app:layout_constraintBottom_toBottomOf="@+id/il_interviewee_coexistence_type"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_interviewee_coexistence_type"
...
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_coexistente_type"
                    app:layout_constraintTop_toBottomOf="@+id/il_interviewee_profession"
                    app:layout_constraintVertical_bias="0.0">

...
