...
    <string name="URL_GET_ESTADISTICAS" translatable="false">%sestadisticas</string>

    <string name="INGLES" translatable="false">en</string>
    <string name="ESPANOL" translatable="false">es</string>

    <!-- SEXO-->
    <string name="SEXO_MASCULINO">Male</string>
    <string name="SEXO_FEMENINO">Female</string>
    <string name="SEXO_OTRO">Other</string>
    <string name="SEXO_MASCULINO_MASTER_KEY" translatable="false">Masculino</string>
    <string name="SEXO_FEMENINO_MASTER_KEY" translatable="false">Femenino</string>
    <string name="SEXO_OTRO_MASTER_KEY" translatable="false">Otro</string>

...
    <string name="CANAL_NOMBRE">Activations alert</string>
    <string name="CANAL_DESCRIPCION">Registration alerts for new researchers</string>

    <!-- Titulos Toolbar -->
    <string name="TITULO_TOOLBAR_PERFIL">Profile</string>
    <string name="TITULO_TOOLBAR_REGISTRO">Register</string>
    <string name="TITULO_TOOLBAR_NUEVO_ENTREVISTADO">New Interviewee</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTADO">Edit Interviewee</string>
    <string name="TITULO_TOOLBAR_NUEVA_ENTREVISTA">New Interview</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTA">Edit Interview</string>
    <string name="TITULO_TOOLBAR_CREAR_EVENTO">New event</string>
    <string name="TITULO_TOOLBAR_EVENTOS">Events</string>
    <string name="TITULO_TOOLBAR_LISTA_ENTREVISTAS">Interviews List</string>
...
    <string name="MENU_CERRAR_SESION">Log out</string>
    <string name="MENU_GENERAL">General</string>
    <string name="MENU_MI_PERFIL">My profile</string>
    <string name="MENU_LISTA_ENTREVISTADOS">Interviewees</string>
    <string name="MENU_ESTADISTICAS">Statistics</string>
    <string name="MENU_CONFIGURACION">Configuration</string>
    <string name="MENU_GUARDAR_DATOS">Save</string>
    <string name="MENU_ENTREVISTA_VER_EVENTO">Show events</string>
    <string name="MENU_ENTREVISTA_EDITAR">Edit interview</string>
    <string name="MENU_ENTREVISTA_ELIMINAR">Delete interview</string>
    <string name="MENU_PERFIL_EDITAR">Edit profile</string>
    <string name="MENU_CONDICIONES">Conditions and privacy</string>
    <string name="MENU_CONTACTENOS">Contact us</string>
...
    <string name="NOMBRE">Name</string>
    <string name="APELLIDO">Last name</string>
    <string name="ICONO_FECHA_NAC_ENTREVISTADO">Interviewee birthdate icon</string>
    <string name="FECHA_NACIMIENTO">Birthdate</string>
    <string name="CIUDAD">City</string>
    <string name="ICONO_CIUDAD_ENTREVISTADO">Interviewee city icon</string>
    <string name="JUBILADO_LEGAL">Legal retiree</string>
    <string name="CONVIVIENTES">Cohabitants</string>
    <string name="CONVIVIENTES_ENTREVISTADO">Icon cohabitants interviewee</string>
    <string name="ESTADO_CIVIL">Marital status</string>
    <string name="SEXO">Gender</string>
    <string name="CAIDAS">Have you ever had falls?</string>
    <string name="CUANTAS_CAIDAS">How many falls?</string>
...
    <string name="interviewees">Interviewees</string>
    <string name="interviewee_filter_icon">Interviewee filter icon</string>
    <string name="title_dialog_selected_interviewee">Selected Interviewee</string>
    <string name="clear_all">Clear all</string>
    <string name="proyectos">Projects</string>
    <string name="project_filter_icon">Project filter icon</string>
    <string name="ok" translatable="false">OK</string>
    <string name="select_project">Select a project</string>
    <string name="to_show_charts_please_open_bottom_menu_and_press_filter_button">To show charts, please open bottom menu and press filter button</string>
    <string name="stats_fragment_error_msg">Failed to load data, please refresh</string>


</resources>
...
